tests/errors/tc_stmt_main_params.lx
@module "main"

pub const main -> fn (x: int) int {
    return x;
}
